<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/cornered_user_item">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="99dp"
        android:layout_height="94dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        tools:ignore="ContentDescription" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50">

        <TextView
            android:id="@+id/userNameFromData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/userLastNameFromData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastName"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/userEmailFromData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/userAgeFromData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textColor="@color/black"
            android:textSize="17sp" />


        <TextView
            android:id="@+id/userEasyScoreFromData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easyScore"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/userMediumScoreFromData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mediumScore"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/userHardScoreFromData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hardScore"
            android:textColor="@color/black"
            android:textSize="17sp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>