<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/stars"
    android:scaleType="fitXY">

    <TextView
        android:id="@+id/mediumQuestionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/questions"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mediumQuestionImageView"
        android:layout_width="409dp"
        android:layout_height="238dp"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mediumQuestionTextView"
        app:srcCompat="@drawable/alazani"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mediumQuestionImageView"
        app:layout_constraintVertical_bias="0.25">

        <CheckBox
            android:id="@+id/mediumAnswer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#86D17E7E"
            android:text="@string/answer1"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/mediumAnswer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#86D17E7E"
            android:text="@string/answer2"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/mediumAnswer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#86D17E7E"
            android:text="@string/answer3"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>